adding deploy action first pass

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/clear-treasury/github-actions#readme",
   "workspaces": [
-    "slack-job-updates"
+    "slack-job-updates",
+    "deploy"
   ]
 }
