--- a/deploy/action.yml
+++ b/deploy/action.yml
@@ -29,4 +29,7 @@ outputs:
 runs:
   using: 'docker'
   image: 'Dockerfile'
-  args: []
+  args:
+    - AWS_ACCESS_KEY_ID={{ inputs.access-key-id }}
+    - AWS_SECRET_ACCESS_KEY={{ inputs.secret-access-key }}
+    - AWS_DEFAULT_REGION={{ inputs.region }}
