--- a/deploy/action.yml
+++ b/deploy/action.yml
@@ -30,6 +30,6 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - "AWS_ACCESS_KEY_ID={{ inputs.access-key-id }}"
-    - "AWS_SECRET_ACCESS_KEY={{ inputs.secret-access-key }}"
-    - "AWS_DEFAULT_REGION={{ inputs.region }}"
+    - "AWS_ACCESS_KEY_ID=${{ inputs.access-key-id }}"
+    - "AWS_SECRET_ACCESS_KEY=${{ inputs.secret-access-key }}"
+    - "AWS_DEFAULT_REGION=${{ inputs.region }}"
