install cdk into the docker container

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3
 
-RUN apk update && apk upgrade && apk add npm
+RUN apk update && apk upgrade && apk add npm && npm i cdk@1
 
 COPY entrypoint.sh /
 
