--- a/actions/cdk-deploy/action.yml
+++ b/actions/cdk-deploy/action.yml
@@ -21,9 +21,11 @@ runs:
         aws-region: ${{ inputs.aws_region }}
     - name: CDK bootstrap
       run: cdk bootstrap
+      shell: bash
     - name: CDK deploy
       run: >
         echo cdk deploy --require-approval=never -c branch="${BRANCH}"
         -c stack_name="${BRANCH}-${{ github.event.repository.id }}"
         -c stack_description="${{ github.event.repository.html_url }}/tree/${BRANCH}"
         --all
+      shell: bash
