--- a/actions/cdk-deploy/action.yml
+++ b/actions/cdk-deploy/action.yml
@@ -7,12 +7,19 @@ inputs:
     required: true
   aws_region:
     required: true
+  working-directory:
+    required: false
+    default: ./
 branding:
   icon: upload-cloud
   color: orange
 runs:
   using: composite
   steps:
+    - name: install dependancies
+      working-directory: ${{ inputs.working-directory }}
+      run: npm ci
+      shell: bash
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -20,9 +27,11 @@ runs:
         aws-secret-access-key: ${{ inputs.aws_secret_access_key }}
         aws-region: ${{ inputs.aws_region }}
     - name: CDK bootstrap
+      working-directory: ${{ inputs.working-directory }}
       run: cdk bootstrap
       shell: bash
     - name: CDK deploy
+      working-directory: ${{ inputs.working-directory }}
       run: >
         echo cdk deploy --require-approval=never -c branch="${BRANCH}"
         -c stack_name="${BRANCH}-${{ github.event.repository.id }}"
