--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -5,9 +5,9 @@ on:
     inputs:
       working-directory:
         description: "The directory name in which to install dependencies. Defaults to root"
-        default: ''
+        default: "./"
         required: false
-        type: string        
+        type: string
 
 jobs:
   install:
@@ -15,11 +15,11 @@ jobs:
 
     defaults:
       run:
-        working-directory: {{ $inputs.working-directory }}
+        working-directory: ${{ inputs.working-directory }}
 
     env:
-      PATH_PREFIX: {{ $inputs.working-directory != '' && format('{0}/', $inputs.working-directory) || '' }}
-      CACHE_PREFIX: {{ $inputs.working-directory != '' && format('{0}-', $inputs.working-directory) || '' }}
+      PATH_PREFIX: ${{ inputs.working-directory != './' && format('{0}/', inputs.working-directory) || '' }}
+      CACHE_PREFIX: ${{ inputs.working-directory != './' && format('{0}-', inputs.working-directory) || '' }}
 
     steps:
       - name: Checkout repo
@@ -31,16 +31,16 @@ jobs:
           # AWS lambdas are still on Node 14 https://github.com/aws/aws-lambda-base-images/issues/14
           node-version: "14"
           cache: "npm"
-          cache-dependency-path: "{{ $env.PATH_PREFIX }}package-lock.json"
+          cache-dependency-path: "${{ env.PATH_PREFIX }}package-lock.json"
           # Our Design System is on github's package registry
           registry-url: "https://npm.pkg.github.com"
 
-      - name: Cache infra dependencies
+      - name: Cache dependencies
         uses: actions/cache@v3
         with:
-          path: {{ $env.PATH_PREFIX }}node_modules
-          key: {{ $env.CACHE_PREFIX }}node_modules-${{ hashFiles('{{ $env.PATH_PREFIX }}package-lock.json') }}
-          restore-keys: {{ $env.CACHE_PREFIX }}node_modules-
+          path: ${{ env.PATH_PREFIX }}node_modules
+          key: ${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}package-lock.json', env.PATH_PREFIX))) }}
+          restore-keys: ${{ env.CACHE_PREFIX }}node_modules-
 
       # Skip post-install scripts here, as a malicious script could steal NODE_AUTH_TOKEN.
       - name: Install dependencies (without scripts)
