--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -21,6 +21,10 @@ jobs:
       PATH_PREFIX: ${{ inputs.working-directory != './' && format('{0}/', inputs.working-directory) || '' }}
       CACHE_PREFIX: ${{ inputs.working-directory != './' && format('{0}-', inputs.working-directory) || '' }}
 
+    outputs:
+      cache-path: ${{ env.PATH_PREFIX }}node_modules
+      cache-key: ${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}package-lock.json', env.PATH_PREFIX))) }}
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -36,6 +40,7 @@ jobs:
           registry-url: "https://npm.pkg.github.com"
 
       - name: Cache dependencies
+        id: cache
         uses: actions/cache@v3
         with:
           path: ${{ env.PATH_PREFIX }}node_modules
