--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -8,6 +8,13 @@ on:
         default: "./"
         required: false
         type: string
+    outputs:
+      cache-path:
+        description: "The path to cached dependencies"
+        value: ${{ env.PATH_PREFIX }}node_modules
+      cache-key: 
+        description: "The key for cached dependencies"
+        value: ${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}package-lock.json', env.PATH_PREFIX))) }}
 
 jobs:
   install:
@@ -20,10 +27,6 @@ jobs:
     env:
       PATH_PREFIX: ${{ inputs.working-directory != './' && format('{0}/', inputs.working-directory) || '' }}
       CACHE_PREFIX: ${{ inputs.working-directory != './' && format('{0}-', inputs.working-directory) || '' }}
-
-    outputs:
-      cache-path: ${{ env.PATH_PREFIX }}node_modules
-      cache-key: ${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}package-lock.json', env.PATH_PREFIX))) }}
 
     steps:
       - name: Checkout repo
