--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -8,13 +8,14 @@ on:
         default: "./"
         required: false
         type: string
+        
     outputs:
       cache-path:
         description: "The path to cached dependencies"
-        value: ${{ env.PATH_PREFIX }}node_modules
-      cache-key: 
+        value: ${{ jobs.install.outputs.cache-path }}
+      cache-key:
         description: "The key for cached dependencies"
-        value: ${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}package-lock.json', env.PATH_PREFIX))) }}
+        value: ${{ jobs.install.outputs.cache-key }}
 
 jobs:
   install:
@@ -27,6 +28,10 @@ jobs:
     env:
       PATH_PREFIX: ${{ inputs.working-directory != './' && format('{0}/', inputs.working-directory) || '' }}
       CACHE_PREFIX: ${{ inputs.working-directory != './' && format('{0}-', inputs.working-directory) || '' }}
+
+    outputs:
+      cache-path: ${{ steps.cache.outputs.path }}
+      cache-key: ${{ steps.cache.outputs.key }}
 
     steps:
       - name: Checkout repo
@@ -42,12 +47,17 @@ jobs:
           # Our Design System is on github's package registry
           registry-url: "https://npm.pkg.github.com"
 
-      - name: Cache dependencies
+      - name: Set cache outputs
         id: cache
+        run: |
+          echo ::set-output name=path::${{ env.PATH_PREFIX }}node_modules
+          echo ::set-output name=key::${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}package-lock.json', env.PATH_PREFIX))) }}
+
+      - name: Cache dependencies
         uses: actions/cache@v3
         with:
-          path: ${{ env.PATH_PREFIX }}node_modules
-          key: ${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}package-lock.json', env.PATH_PREFIX))) }}
+          path: ${{ steps.cache.outputs.path }}
+          key: ${{ steps.cache.outputs.key }}
           restore-keys: ${{ env.CACHE_PREFIX }}node_modules-
 
       # Skip post-install scripts here, as a malicious script could steal NODE_AUTH_TOKEN.
