--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -16,6 +16,9 @@ on:
       cache-key:
         description: "The key for cached dependencies"
         value: ${{ jobs.install.outputs.cache-key }}
+      cache-restore:
+        description: "The restore key for cached dependencies"
+        value: ${{ jobs.install.outputs.cache-restore }}        
 
 jobs:
   install:
@@ -32,6 +35,7 @@ jobs:
     outputs:
       cache-path: ${{ steps.cache.outputs.path }}
       cache-key: ${{ steps.cache.outputs.key }}
+      cache-restore: ${{ steps.cache.outputs.restore }}
 
     steps:
       - name: Checkout repo
@@ -52,13 +56,14 @@ jobs:
         run: |
           echo ::set-output name=path::${{ env.PATH_PREFIX }}node_modules
           echo ::set-output name=key::${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}package-lock.json', env.PATH_PREFIX))) }}
+          echo ::set-output name=restore::${{ format('{0}node_modules-', env.CACHE_PREFIX) }}
 
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
           path: ${{ steps.cache.outputs.path }}
           key: ${{ steps.cache.outputs.key }}
-          restore-keys: ${{ env.CACHE_PREFIX }}node_modules-
+          restore-keys: ${{ steps.cache.outputs.restore }}
 
       # Skip post-install scripts here, as a malicious script could steal NODE_AUTH_TOKEN.
       - name: Install dependencies (without scripts)
