--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -52,9 +52,9 @@ jobs:
       - name: Set cache outputs
         id: cache
         run: |
-          echo ::set-output name=path::${{ env.PATH_PREFIX }}node_modules
-          echo ::set-output name=key::${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}package-lock.json', env.PATH_PREFIX))) }}
-          echo ::set-output name=restore::${{ format('{0}node_modules-', env.CACHE_PREFIX) }}
+          echo "path=${{ env.PATH_PREFIX }}node_modules" >> $GITHUB_OUTPUT
+          echo "key=${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}package-lock.json', env.PATH_PREFIX))) }}" >> $GITHUB_OUTPUT
+          echo "restore=${{ format('{0}node_modules-', env.CACHE_PREFIX) }}" >> $GITHUB_OUTPUT
 
       - name: Cache dependencies
         uses: actions/cache@v3
