Simplify legacy-peer-deps in install action

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -70,15 +70,7 @@ jobs:
 
       # Skip post-install scripts here, as a malicious script could steal NODE_AUTH_TOKEN.
       - name: Install dependencies (without scripts)
-        if: inputs.legacy-peer-deps == false
-        run: npm ci --ignore-scripts
-        env:
-          # See https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#use-private-packages
-          NODE_AUTH_TOKEN: ${{ secrets.GPR_READ_TOKEN }}
-
-      - name: Install dependencies (without scripts)
-        if: inputs.legacy-peer-deps == true
-        run: npm ci --ignore-scripts --legacy-peer-deps
+        run: npm ci --ignore-scripts ${{ inputs.legacy-peer-deps == true && '--legacy-peer-deps' || '' }}
         env:
           # See https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#use-private-packages
           NODE_AUTH_TOKEN: ${{ secrets.GPR_READ_TOKEN }}
