--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -49,6 +49,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3
         with:
+          node-version: 16
           cache: "npm"
           cache-dependency-path: "${{ env.PATH_PREFIX }}package-lock.json"
           # Our Design System is on github's package registry
