--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -4,12 +4,12 @@ on:
   workflow_call:
     inputs:
       working-directory:
-        description: "The directory name in which to install dependencies. Defaults to root"
-        default: "./"
+        description: "The directory name in which to install dependencies. Defaults to github.workspace"
+        default: ""
         required: false
         type: string
       legacy-peer-deps:
-        description: "Optional flag to run npm with --legacy-peer-deps. Defaults to false"
+        description: "Optionally run npm with --legacy-peer-deps. Defaults to false"
         default: false
         required: false
         type: boolean
@@ -34,8 +34,8 @@ jobs:
         working-directory: ${{ inputs.working-directory }}
 
     env:
-      PATH_PREFIX: ${{ inputs.working-directory != './' && format('{0}/', inputs.working-directory) || '' }}
-      CACHE_PREFIX: ${{ inputs.working-directory != './' && format('{0}-', inputs.working-directory) || '' }}
+      PATH_PREFIX: ${{ inputs.working-directory != '' && format('{0}/{1}', github.workspace, inputs.working-directory) || github.workspace }}
+      CACHE_PREFIX: ${{ inputs.working-directory != '' && format('{0}-', inputs.working-directory) || '' }}
 
     outputs:
       cache-path: ${{ steps.cache.outputs.path }}
@@ -51,16 +51,16 @@ jobs:
         with:
           node-version: 16
           cache: "npm"
-          cache-dependency-path: "${{ env.PATH_PREFIX }}package-lock.json"
+          cache-dependency-path: ${{ env.PATH_PREFIX }}/package-lock.json
           # Our Design System is on github's package registry
           registry-url: "https://npm.pkg.github.com"
 
       - name: Set cache outputs
         id: cache
         run: |
-          echo "path=${{ env.PATH_PREFIX }}node_modules" >> $GITHUB_OUTPUT
-          echo "key=${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}package-lock.json', env.PATH_PREFIX))) }}" >> $GITHUB_OUTPUT
-          echo "restore=${{ format('{0}node_modules-', env.CACHE_PREFIX) }}" >> $GITHUB_OUTPUT
+          echo ::set-output name=path::${{ env.PATH_PREFIX }}/node_modules
+          echo ::set-output name=key::${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}/package-lock.json', env.PATH_PREFIX))) }}
+          echo ::set-output name=restore::${{ format('{0}node_modules-', env.CACHE_PREFIX) }}
 
       - name: Cache dependencies
         uses: actions/cache@v3
