--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       working-directory:
         description: "The directory name in which to run lint. Defaults to root"
-        default: "./"
+        default: ""
         required: false
         type: string
 
@@ -18,8 +18,8 @@ jobs:
         working-directory: ${{ inputs.working-directory }}
 
     env:
-      PATH_PREFIX: ${{ inputs.working-directory != './' && format('{0}/', inputs.working-directory) || '' }}
-      CACHE_PREFIX: ${{ inputs.working-directory != './' && format('{0}-', inputs.working-directory) || '' }}
+      PATH_PREFIX: ${{ inputs.working-directory != '' && format('{0}/{1}', github.workspace, inputs.working-directory) || github.workspace }}
+      CACHE_PREFIX: ${{ inputs.working-directory != '' && format('{0}-', inputs.working-directory) || '' }}
 
     steps:
       - name: Checkout repo
@@ -31,8 +31,8 @@ jobs:
       - name: Load app dependencies
         uses: actions/cache@v3
         with:
-          path: ${{ env.PATH_PREFIX }}node_modules
-          key: ${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}package-lock.json', env.PATH_PREFIX))) }}
+          path: ${{ env.PATH_PREFIX }}/node_modules
+          key: ${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}/package-lock.json', env.PATH_PREFIX))) }}
 
       - name: Lint
         run: npm run lint
