--- a/.github/workflows/build-nextjs.yml
+++ b/.github/workflows/build-nextjs.yml
@@ -13,6 +13,9 @@ jobs:
 
       - name: Setup node
         uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: "npm"
 
       # TODO: assumes root directory but might need to accept a working-directory input
       - name: Load app dependencies
