--- a/.github/workflows/build-nextjs.yml
+++ b/.github/workflows/build-nextjs.yml
@@ -28,15 +28,15 @@ jobs:
       - name: Cache nextjs build dirs
         uses: actions/cache@v3
         with:
-          # .next/standalone gets generated when deploying with @sledg/nextjs-lambda
+          # .next/standalone and next.out are generated when deploying with @sledg/nextjs-lambda
           path: |
             ${{ github.workspace }}/.next/cache
             ${{ github.workspace }}/.next/standalone
             ${{ github.workspace }}/next.out
           # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          key: nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           # If source files changed but packages didn't, rebuild from a prior cache.
-          restore-keys: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+          restore-keys: nextjs-${{ hashFiles('**/package-lock.json') }}-
 
       - name: Build
         run: |
