--- a/.github/workflows/build-nextjs.yml
+++ b/.github/workflows/build-nextjs.yml
@@ -30,8 +30,7 @@ jobs:
         with:
           # .next/standalone and next.out are generated when deploying with @sledg/nextjs-lambda
           path: |
-            ${{ github.workspace }}/.next/cache
-            ${{ github.workspace }}/.next/standalone
+            ${{ github.workspace }}/.next
             ${{ github.workspace }}/next.out
           # Generate a new cache whenever packages or source files change.
           key: nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
