--- a/.github/workflows/build-nextjs.yml
+++ b/.github/workflows/build-nextjs.yml
@@ -33,7 +33,7 @@ jobs:
             ${{ github.workspace }}/.next
             ${{ github.workspace }}/next.out
           # Generate a new cache whenever packages or source files change.
-          key: nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          key: nextjs-${{ hashFiles('package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: nextjs-${{ hashFiles('**/package-lock.json') }}-
 
