Make next dir paths consistant to avoid cache misses

--- a/.github/workflows/deploy-nextjs.yml
+++ b/.github/workflows/deploy-nextjs.yml
@@ -44,6 +44,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
+            ${{ github.workspace }}/.next/cache
             ${{ github.workspace }}/.next/standalone
             ${{ github.workspace }}/next.out
           key: nextjs-${{ hashFiles('package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
