Continue to tweak cache paths

--- a/.github/workflows/build-nextjs.yml
+++ b/.github/workflows/build-nextjs.yml
@@ -35,7 +35,7 @@ jobs:
           # Generate a new cache whenever packages or source files change.
           key: nextjs-${{ hashFiles('package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           # If source files changed but packages didn't, rebuild from a prior cache.
-          restore-keys: nextjs-${{ hashFiles('**/package-lock.json') }}-
+          restore-keys: nextjs-${{ hashFiles('package-lock.json') }}-
 
       - name: Build
         run: |
