Add optional aws account id to deploy action

--- a/.github/workflows/deploy-nextjs.yml
+++ b/.github/workflows/deploy-nextjs.yml
@@ -9,6 +9,8 @@ on:
         required: true
       aws-region:
         required: true
+      aws-account-id:
+        required: false
 
 jobs:
   deploy:
@@ -57,6 +59,9 @@ jobs:
           aws-region: ${{ secrets.aws-region }}
 
       - name: Deploy
+        env:
+          AWS_ACCOUNT_ID: ${{ secrets.aws-account-id }}
+          AWS_REGION: ${{ secrets.aws-region }}
         run: |
           npm run cdk bootstrap
           npm run cdk deploy -- --all --require-approval=never \
