--- a/actions/typecheck.yml
+++ b/actions/typecheck.yml
@@ -1,16 +1,16 @@
-name: Lint files
+name: Typecheck files
 
 on:
   workflow_call:
     inputs:
       working-directory:
-        description: "The directory name in which to run lint. Defaults to root"
+        description: "The directory name in which to type checking. Defaults to root"
         default: ""
         required: false
         type: string
 
 jobs:
-  lint:
+  typecheck:
     runs-on: ubuntu-latest
 
     defaults:
@@ -37,5 +37,5 @@ jobs:
           path: ${{ env.PATH_PREFIX }}/node_modules
           key: ${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}/package-lock.json', env.PATH_PREFIX))) }}
 
-      - name: Lint
-        run: npm run lint
+      - name: Typecheck
+        run: npm run type-check
