--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -51,6 +51,7 @@ jobs:
         with:
           node-version: 16
           cache: "npm"
+          cache-dependency-path: ${{ env.PATH_PREFIX }}/package-lock.json
           # Our Design System is on github's package registry
           registry-url: "https://npm.pkg.github.com"
 
