--- a/.github/workflows/typecheck.yml
+++ b/.github/workflows/typecheck.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           node-version: 16
           cache: "npm"
+          cache-dependency-path: ${{ env.PATH_PREFIX }}/package-lock.json
 
       - name: Load dependencies
         uses: actions/cache@v3
