--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,8 +18,8 @@ jobs:
         working-directory: ${{ inputs.working-directory || github.workspace }}
 
     env:
-      PATH_PREFIX: ${{ inputs.working-directory != '' && format('{0}/{1}', github.workspace, inputs.working-directory) || github.workspace }}
-      CACHE_PREFIX: ${{ inputs.working-directory != '' && format('{0}-', inputs.working-directory) || '' }}
+      PATH_PREFIX: ${{ inputs.working-directory && format('{0}/{1}', github.workspace, inputs.working-directory) || github.workspace }}
+      CACHE_PREFIX: ${{ inputs.working-directory && format('{0}-', inputs.working-directory) || '' }}
 
     steps:
       - name: Checkout repo
