--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Load infra dependencies
         uses: actions/cache@v3
         with:
-          path: infra/node_modules
-          key: infra-node_modules-${{ hashFiles('infra/package-lock.json') }}
+          path: format('{0}/infra/node_modules', github.workspace)
+          key: infra-node_modules-${{ hashFiles(format('{0}/infra/package-lock.json', github.workspace)) }}
 
       - name: Configure AWS credentials
         # REF: https://github.com/aws-actions/configure-aws-credentials/issues/489#issuecomment-1278145876
