--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Load infra dependencies
         uses: actions/cache@v3
         with:
-          path: format('{0}/infra/node_modules', github.workspace)
+          path: ${{ format('{0}/infra/node_modules', github.workspace) }}
           key: infra-node_modules-${{ hashFiles(format('{0}/infra/package-lock.json', github.workspace)) }}
 
       - name: Configure AWS credentials
