Move deploy packaging into deploy job

--- a/.github/workflows/deploy-nextjs.yml
+++ b/.github/workflows/deploy-nextjs.yml
@@ -47,8 +47,13 @@ jobs:
         with:
           path: |
             ${{ github.workspace }}/.next
-            ${{ github.workspace }}/next.out
           key: nextjs-${{ hashFiles(format('{0}/package-lock.json', github.workspace)) }}-${{ hashFiles(format('{0}/**.[jt]s', github.workspace), format('{0}/**.[jt]sx', github.workspace)) }}
+
+      - name: Package for deploy
+        run: |
+          if [[ -d infra/node_modules/@sladg/nextjs-lambda ]]; then
+            npm --prefix infra exec --package @sladg/nextjs-lambda -- next-utils pack
+          fi
 
       - name: Configure AWS credentials
         # REF: https://github.com/aws-actions/configure-aws-credentials/issues/489#issuecomment-1278145876
