--- a/.github/workflows/deploy-nextjs.yml
+++ b/.github/workflows/deploy-nextjs.yml
@@ -49,6 +49,14 @@ jobs:
             ${{ github.workspace }}/.next
           key: nextjs-${{ hashFiles(format('{0}/package-lock.json', github.workspace)) }}-${{ hashFiles(format('{0}/**.[jt]s', github.workspace), format('{0}/**.[jt]sx', github.workspace)) }}
 
+      - name: Cache nextjs build dirs
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ github.workspace }}/next.out
+          # Generate a new cache whenever packages or source files change.
+          key: nextjs-lambda-${{ hashFiles(format('{0}/package-lock.json', github.workspace)) }}-${{ hashFiles(format('{0}/**.[jt]s', github.workspace), format('{0}/**.[jt]sx', github.workspace)) }}
+
       - name: Package for deploy
         run: |
           if [[ -d infra/node_modules/@sladg/nextjs-lambda ]]; then
