Add account to deploy context

--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -58,8 +58,10 @@ jobs:
           AWS_REGION: ${{ secrets.aws-region }}
         run: |
           npm run cdk bootstrap
+          # `env` is deprecated. use `aws-account-name` instead
           npm run cdk deploy -- --all --require-approval=never \
             --context env="${{ inputs.env }}" \
+            --context account="${{ inputs.aws-account-name }}" \
             --context branch="${{ github.ref_name }}" \
             --context stack_name="${{ github.ref_name }}-${{ github.event.repository.id }}" \
             --context stack_description="${{ github.event.repository.html_url }}/tree/${{ github.ref_name }}"
