--- a/.github/workflows/int-test.yml
+++ b/.github/workflows/int-test.yml
@@ -1,4 +1,4 @@
-name: Run unit tests
+name: Run integration tests
 
 on:
   workflow_call:
@@ -10,7 +10,7 @@ on:
         type: string
 
 jobs:
-  unit-test:
+  int-test:
     runs-on: ubuntu-latest
 
     defaults:
