--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -4,10 +4,15 @@ on:
   workflow_call:
     inputs:
       env:
-        description: "The name of the environment to deploy to. Defaults to nonprod."
+        description: "Depracated. The name of the environment to deploy to. Defaults to nonprod."
         default: "nonprod"
         required: false
         type: string
+      aws-account-name: 
+        description: "The name of the environment to deploy to. Defaults to nonprod. Replaces env"
+          default: "nonprod"
+          required: false
+          type: string
 
     secrets:
       aws-access-key-id:
