--- a/.github/workflows/deploy-nextjs.yml
+++ b/.github/workflows/deploy-nextjs.yml
@@ -6,6 +6,10 @@ on:
       aws-account-name:
         type: string
         required: true
+      build-cache-prefix:
+        type: string
+        required: false
+        default: ""
     secrets:
       aws-access-key-id:
         required: true
@@ -13,6 +17,12 @@ on:
         required: true
       aws-region:
         required: true
+      sentry-auth-token:
+        required: false
+      sentry-enviroment:
+        required: false
+      sentry-dsn:
+        required: false
 
 jobs:
   deploy:
@@ -49,7 +59,7 @@ jobs:
         with:
           path: |
             ${{ github.workspace }}/.next
-          key: nextjs-${{ hashFiles(format('{0}/package-lock.json', github.workspace)) }}-${{ hashFiles(format('{0}/src/**.[jt]sx?', github.workspace), format('{0}/public/**', github.workspace), format('{0}/*.config.*', github.workspace)) }}
+          key: nextjs${{inputs.build-cache-prefix}}-${{ hashFiles(format('{0}/package-lock.json', github.workspace)) }}-${{ hashFiles(format('{0}/src/**.[jt]sx?', github.workspace), format('{0}/public/**', github.workspace), format('{0}/*.config.*', github.workspace)) }}
 
       - name: Package artefacts for deploy
         if: steps.cache-artefacts.outputs.cache-hit != 'true'
@@ -71,6 +81,9 @@ jobs:
       - name: Deploy
         env:
           AWS_ACCOUNT_ID: ${{ steps.aws-credentials.outputs.aws-account-id }}
+          SENTRY_DSN: ${{ secrets.sentry-dsn }}
+          SENTRY_ENVIRONMENT: ${{ secrets.sentry-environment }}}
+          SENTRY_AUTH_TOKEN: ${{ secrets.sentry-auth-token }}
         run: |
           npm run cdk bootstrap
           npm run cdk deploy -- --all --require-approval=never \
