updated cognito config for deployment

--- a/.github/workflows/deploy-nextjs.yml
+++ b/.github/workflows/deploy-nextjs.yml
@@ -85,8 +85,8 @@ jobs:
       - name: Deploy
         env:
           AWS_ACCOUNT_ID: ${{ steps.aws-credentials.outputs.aws-account-id }}
-          USER_POOL_ID: ${{ secrets.user_pool_id || '' }}
-          USER_POOL_WEB_CLIENT_ID: ${{ secrets.user_pool_web_client_id || '' }}
+          ADMIN_USER_POOL_ID: ${{ secrets.admin_user_pool_id || '' }}
+          ADMIN_USER_POOL_WEB_CLIENT_ID: ${{ secrets.admin_user_pool_web_client_id || '' }}
           SENTRY_DSN: ${{ secrets.sentry-dsn }}
           SENTRY_ENVIRONMENT: ${{ secrets.sentry-environment }}}
           SENTRY_AUTH_TOKEN: ${{ secrets.sentry-auth-token }}
