--- a/.github/workflows/deploy-nextjs.yml
+++ b/.github/workflows/deploy-nextjs.yml
@@ -36,6 +36,10 @@ jobs:
       run:
         working-directory: infra
 
+    env:
+      NEXT_PUBLIC_ADMIN_USER_POOL_ID: ${{ secrets.next_public_admin_user_pool_id || '' }}
+      NEXT_PUBLIC_ADMIN_USER_POOL_WEB_CLIENT_ID: ${{ secrets.next_public_admin_user_pool_web_client_id || '' }}
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -68,6 +72,9 @@ jobs:
       - name: Package artefacts for deploy
         if: steps.cache-artefacts.outputs.cache-hit != 'true'
         working-directory: ${{ github.workspace }}
+        env:
+          NEXT_PUBLIC_ADMIN_USER_POOL_ID: ${{ secrets.next_public_admin_user_pool_id || '' }}
+          NEXT_PUBLIC_ADMIN_USER_POOL_WEB_CLIENT_ID: ${{ secrets.next_public_admin_user_pool_web_client_id || '' }}
         run: |
           if [[ -d infra/node_modules/@sladg/nextjs-lambda ]]; then
             npm exec --yes --package infra/node_modules/@sladg/nextjs-lambda -- next-utils pack
